k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: registry.gitlab.com/morifuji/nand2tetris/nginx:test
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
