k8s/node-exporter.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9100'
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter:v0.13.0
        ports:
        - containerPort: 9100
      hostNetwork: true
      hostPID: true
