k8s/node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: janus-port
spec:
  type: NodePort
  ports:
    - name: "janus-port"
      protocol: "TCP"
      port: 8088
      targetPort: 8088
    - name: "janus-ws-port"
      protocol: "TCP"
      port: 8188
      targetPort: 8188
  selector:
    app: janus
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-port
spec:
  type: NodePort
  ports:
    - name: "nginx-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: nginx
